XPC Relay demonstration
Does not have a matching linux application.  The best way to test this
is to send the bytestring "\x00\x00\x01\x00\x00" to UART0.
Main LED is RED when waiting for reset. Main LED is BLUE after reply is
received.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "tinyxpc"]
 	path = subprojects/tinyxpc
 	url = https://github.com/PyroAVR/tinyxpc
+[submodule "base_queue"]
+	path = subprojects/base_queue
+	url = https://github.com/P20123/base_queue
