--- a/meson.build
+++ b/meson.build
@@ -1,28 +1,31 @@
 project('k64_base', 'c')
 
 # dependencies
-dependencies = []
+dependencies = [subproject('base_queue').get_variable('dep_queue')]
 
 # Project include path.
 local_headers = ['include']
 
 # List of C sources to compile. Relative to project root.
 c_sources = [
-    'src/kernel/hardfault.c',
-    'src/kernel/kernel_support.c',
-    'src/kernel/environment.c',
-    'src/kernel/abort.c',
+    # kernel
     'src/kernel/boot.c',
     'src/kernel/kernel_main.c',
-    'src/kernel/sbrk.c',
+    'src/kernel/file_table.c',
+    'src/kernel/hardfault.c',
+    'src/kernel/environment.c',
+    # libc
     'src/nongnu/unistd.c',
-    'src/drivers/uart.c'
+    'src/libc/string.c',
+    # drivers
+    'src/drivers/kinetis/uart.c',
+    # programs
+    'src/programs/pcb_scratch.c'
 ]
 
 # List of ASM sources to compile.  Relative to project root.
 asm_sources = [
-    'src/asmlib/queue.s',
-    'src/asmlib/uart_driver.s'
+    'src/programs/enter_proc.s'
 ]
 
 ## project setup
