--- a/template_files/k64_files/k64_cross_properties.cfg
+++ b/template_files/k64_files/k64_cross_properties.cfg
@@ -16,7 +16,7 @@ system = 'baremetal'
 needs_exe_wrapper = true
 # If you are including Newlib from a package manager, remove the floating-point
 # arguments and replace them with: -mfloat-abi=soft
-c_args = ['-mcpu=cortex-m4', '-mfloat-abi=hard', '-mfpu=fpv4-sp-d16']
+c_args = ['-mcpu=cortex-m4', '-mfloat-abi=softfp', '-mfpu=fpv4-sp-d16']
 # True baremetal: -nostdlib
 # Baremetal with crt0.S: -nodefaultlibs
 # If using Newlib, add --specs=nano.specs --specs=nosys.specs
