Whole archive for asm_static_object linked.
This is to support interrupt handlers with assembly language entry
points, which are optimized away by `ld` since they are never directly
called.

--- a/meson.build
+++ b/meson.build
@@ -67,7 +67,7 @@ main = executable(
     'main.elf',
     c_sources,
     include_directories: _incl_dirs,
-    link_with: asm_static_object,
+    link_whole: asm_static_object,
     dependencies: dependencies,
     install: true,
     install_dir: false
