Added libc/string.  Basic string and mem helpers.
These are reasonably optimized for ARMv7e-m.  They take advantage of 32
bit bus width, but not much else.

--- a/meson.build
+++ b/meson.build
@@ -22,6 +22,7 @@ c_sources = [
     'src/nongnu/unistd.c',
     # libc
     'src/libc/errno.c',
+    'src/libc/string.c',
     # drivers
     # programs
 ]
