--- a/meson.build
+++ b/meson.build
@@ -15,7 +15,9 @@ c_sources = [
     'src/kernel/sbrk.c',
     'src/nongnu/unistd.c',
     'src/drivers/uart.c',
-    'src/programs/dma.c'
+    'src/drivers/servo_ctrl.c',
+    'src/programs/floatingpoint.c',
+    'src/programs/main.c'
 ]
 
 # List of ASM sources to compile.  Relative to project root.
