Context Switching, Preemption, SysTick timer, etc. (#13)
* Fixed up UNIX interfaces for upcoming IO changes.

 + uart_write no longer returns the available buffer space with zero
 bytes as an argument.
 + file table now includes a lock entry

These changes reflect a move towards a multi-process, shared-IO-context
style OS paradigm.  I don't really know what I'm doing, but imagine that
you have an application-level C program that consumes the entire
processor, but that application is multi-threaded: that's where we're
going.

* Force full linkage of asm.  Disable Extended Stack

 + Extended Stack Frames (on exception entry) are disabled until a
 process uses the floating point unit. (this is not well tested yet)
 + ASM code is now fully-linked (-Wl,--whole-archive). This is to
 prevent assembly language ISRs from being discarded by the linker.

* Streaming IO locks are now marshalled via SVC.

Service calls (SVC) are now used to perform read and write operations.
This has the benefit of implicitly disabling preemption during a read or
write operation, which causes occasional data corruption when there is
high process switch load and multiple processes are doing IO on the same
file.

Note that making PendSV a higher interrupt priority than SVC will break
this.

* Scheduler nearly complete and refactored.

Unfortunately, in order to do this neatly, a great deal of kernel
structure needed to be added.  Some of it is unnecessary, but worthwhile
in the long run, and ultimately makes the code more segmented and
structured.

 + The kernel now has "ports" - there is only the arm/cm4 port,
 currently.
 + Generic algorithms have their own files/modules at the kernel level,
 but their entry points are defined in the port.
 + The NVIC and Core priorities have been figured out.  Bug reports
 coming in hot to move everything to use NVIC_SetPriority due to
 MSB-aligned implementation (thanks, ARM.)

 - Kernel memory is a hot mess. There 

--- a/meson.build
+++ b/meson.build
@@ -18,19 +18,22 @@ c_sources = [
     'src/kernel/abort.c',
     'src/kernel/boot.c',
     'src/kernel/kernel_main.c',
-    'src/kernel/sbrk.c',
-    'src/nongnu/unistd.c',
+    'src/kernel/file_table.c',
+    'src/kernel/hardfault.c',
+    'src/kernel/environment.c',
     # libc
     'src/libc/errno.c',
+    'src/nongnu/unistd.c',
     'src/libc/string.c',
     # drivers
+    'src/drivers/kinetis/uart.c',
     # programs
+    'src/programs/pcb_scratch.c'
 ]
 
 # List of ASM sources to compile.  Relative to project root.
 asm_sources = [
-    'src/asmlib/queue.s',
-    'src/asmlib/uart_driver.s'
+    'src/programs/enter_proc.s'
 ]
 
 ## project setup
