XPC Relay process demo and example code
The XPC Relay is now run in a process instead of on a timer.  The usual
XPC functions perform as expected.  The channel is hardcoded to be
configured as no-crc, little-endian, no-flow-control.

To run:

```
meson configure <builddir> -Dapplications=['"xpc_relay"',
'"xpc_spammer"']
```
Compile and flash normally.  Connect an XPC relay on the serial port.
The message `hello world\r\n` will appear repeatedly on channel (1 -> 1).

Since there isn't a real relay on Linux yet:

```
stty -F <serial port> 115200
python -c "print('\x00\x00\x01\x00\x00', end='')" > <serial port>
screen <serial port> 115200
```

The message stream (and unprintable xpc headers) will appear via screen
(or whatever you choose to use).

--- a/src/programs/meson.build
+++ b/src/programs/meson.build
@@ -34,3 +34,14 @@ if get_variable('applications').contains('xpc_relay')
     ])
     dependencies += [dependency('tinyxpc', fallback: ['tinyxpc', 'dep_relay'])]
 endif
+
+if get_variable('applications').contains('xpc_spammer')
+    add_project_arguments('-DTASK_EN_XPC_SPAMMER', language: 'c')
+    peripherals_required += ['uart']
+    devices_required += ['status_leds']
+
+    c_sources += files([
+        'xpc_spammer.c',
+    ])
+    dependencies += [dependency('tinyxpc', fallback: ['tinyxpc', 'dep_relay'])]
+endif
