Refactored FTM Driver. Included is a working interface for the FTM peripheral. - Direct CnV set - Abstracted duty cycle set - Configurable structs for initialization Note: `environment.c` currently contains all the configuration structs for devices that we will use in the project. These will be moved out in a seperate branch/PR for the servo/esc device drivers.

--- a/src/drivers/meson.build
+++ b/src/drivers/meson.build
@@ -24,6 +24,12 @@ if get_variable('target_system', 'MK64F12') == 'MK64F12'
             'kinetis/uart.c',
         ])
     endif
+    if peripherals_required.contains('ftm')
+        add_project_arguments('-DKINETIS_USE_FTM', language: 'c')
+        c_sources += files([
+            'kinetis/ftm.c',
+        ])
+    endif
 endif
 
 if devices_required.contains('altimu')
