Added a mutual-exclusion lock system call.
This is needed because mutexes need to be atomic, and we have no other
facilities for making that guarantee.

This feature was added to support the xpc relay, and the need to mutex
lock the relay's context.  I was hoping to not have to do this, but
alas, I forgot about the atomicity constraint of mutex locking. How
foolish.

--- a/src/kernel/meson.build
+++ b/src/kernel/meson.build
@@ -10,6 +10,8 @@ c_sources += files([
     'service_dispatch.c',
     'schedule.c',
     'private/static_memory.c',
+    'mutex.c',
+    'mutex_lock.c',
 ])
 if get_variable('cpu_arch', 'arm-cortexm4') == 'arm-cortexm4'
     if get_variable('target_system', 'MK64F12') == 'MK64F12'
