Flight Control Process, Motor Drivers, Servo Drivers! Exciting!! (#24)
* Added working motor driver

* Working servo drivers!

* Added error checking to the motor drive functions

* Merged flight control main!

Co-authored-by: Piers Kwan <me@pierskwan.com>

--- a/src/programs/meson.build
+++ b/src/programs/meson.build
@@ -34,3 +34,13 @@ if get_variable('applications').contains('xpc_relay')
     ])
     dependencies += [dependency('tinyxpc', fallback: ['tinyxpc', 'dep_relay'])]
 endif
+
+if get_variable('applications').contains('flight_ctrl')
+    add_project_arguments('-DTASK_EN_FLIGHT_CTRL', language: 'c')
+    peripherals_required += ['ftm']
+    devices_required += ['servos', 'motors']
+
+    c_sources += files([
+        'flight_ctrl.c',
+    ])
+endif
