Added meson.build entry for pid controller.

--- a/src/algo/meson.build
+++ b/src/algo/meson.build
@@ -9,3 +9,10 @@ if algos_required.contains('mahony')
             'mahony.c',
         ])
 endif
+
+if algos_required.contains('pid')
+        add_project_arguments('-DALGO_EN_PID', language: 'c')
+        c_sources += files([
+            'pid.c',
+        ])
+endif
